--- a/.github/workflows/Auto compile with openwrt sdk.yml
+++ b/.github/workflows/Auto compile with openwrt sdk.yml
@@ -307,12 +307,7 @@ jobs:
         id: compile
         run: |
           cd sdk
-          for package in $(ls feeds/passwall_packages); do
-              if [ -d "feeds/passwall_packages/$package" ]; then
-                  make package/feeds/passwall_packages/$package/compile -j$(nproc) 2>/dev/null
-              fi
-          done
-
+          make package/feeds/passwall_packages/shadowsocksr-libev/compile -j$(nproc) 2>/dev/null
           echo "status=success" >> $GITHUB_OUTPUT
 
       - name: Organize ${{ matrix.platform }} files
